# effects

./: .gitignore  WORKSPACE  dependencies.bzl  effects.cabal  maven_install.json
app/: Main.hs
hs/: package.yaml
src/: BUILD.bazel  Lib.hs
src/main/scala/effects/: BUILD.bazel  Effect.scala  EffectT.scala  Library.scala  Main.scala  RTS.scala  Runtime.scala  implicits.scala
